--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation(
-            "com.codeborne:selenide:6.3.5",
-            "org.junit.jupiter:junit-jupiter:5.11.1"
+    testImplementation (
+            "com.codeborne:selenide:7.2.0",
+            "org.junit.jupiter:junit-jupiter:5.9.2",
+            "org.slf4j:slf4j-simple:2.0.6"
     )
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
 }
 
 test {
