--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ dependencies {
     testImplementation (
             "com.codeborne:selenide:7.2.0",
             "org.junit.jupiter:junit-jupiter:5.9.2",
-            "org.slf4j:slf4j-simple:2.0.6"
+            "org.slf4j:slf4j-simple:2.0.6",
+            "io.github.bonigarcia:webdrivermanager:5.6.3"
     )
 }
 
